fix: prevent default keydown event & mode tip z-index

--- a/src/styles/audioListsPanel.less
+++ b/src/styles/audioListsPanel.less
@@ -9,7 +9,7 @@
   position: fixed;
   right: 33px;
   bottom: @music-player-panel-height;
-  z-index: 999;
+  z-index: @panel-z-index;
   width: @lists-panel-width;
   height: @lists-panel-height;
   color: rgba(255, 255, 255, 0.8);
@@ -18,6 +18,7 @@
   transform: scale(0);
   display: none\9;
   transition: background-color @common-animate-time;
+  border-radius: @border-radius @border-radius 0 0;
   svg {
     font-size: 24px;
   }
@@ -29,7 +30,7 @@
     animation: scaleFrom @common-animate-time forwards;
     display: none\9;
   }
-  @media screen and (max-width: 767px) {
+  @media @mobile {
     width: 100% !important;
     top: 0;
     left: 0;
@@ -38,6 +39,7 @@
     height: auto !important;
     transform-origin: bottom center;
     background-color: @panel-bg-mobile;
+    border-radius: 0;
     &.show {
       animation: fromTo @common-animate-time forwards;
       display: block\9;
@@ -94,7 +96,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     height: @lists-panel-height - @panel-header-height - 1px;
-    @media screen and (max-width: 767px) {
+    @media @mobile {
       width: 100% !important;
       height: calc(~'100vh - @{panel-header-height}') !important;
       transform-origin: bottom center;
@@ -131,7 +133,7 @@
         animation: remove @common-animate-time forwards;
       }
 
-      @media screen and (max-width: 767px) {
+      @media @mobile {
         background-color: @lists-panel-item-bg-mobile !important;
         &.playing {
           background-color: @lists-panel-item-bg-playing-mobile !important;
