--- a/src/styles/vars.less
+++ b/src/styles/vars.less
@@ -5,6 +5,7 @@
 @light-theme-panel-bg: #fff;
 @light-theme-controller-bg: #fff;
 
+@border-radius: 4px;
 @music-player-panel-height: 80px;
 
 @lists-panel-width: 480px;
@@ -34,4 +35,11 @@
 @player-lyric-color: @primary-color;
 @player-lyric-font-size: 36px;
 @player-lyric-font-size-mobile: 16px;
+
 @player-lyric-z-index: 999;
+@panel-z-index: 999;
+@mode-tip-z-index: 1000;
+
+@scroll-bar-width: 8px;
+
+@mobile: ~'screen and (max-width: 767px)';
